# lv16-block-encoding

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  benchmark.json  matrixmul.js  package.json  score.json
.github/workflows/: trusted-worker.yml  validate.yml
challenges/: target_16q.json
docs/: submission-package-v1.md
src/: lib.rs
src/matmul/: README.md  architecture.mmd  mod.rs
src/util/: generate_baseline.rs  generate_solution.rs  generate_target.rs  verify.rs
tools/: archive-policy.cjs  trusted-worker.mjs
